--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ main{
 }
 
 .red {
-    background-image: radial-gradient( circle 738px at 7.4% 47.9%, rgba(225, 63, 79, 1) 0%, rgba(245, 61, 79, 1) 47%, rgba(247, 161, 175, 1) 90.2%) !important;
+    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(130,12,10,1) 0%, rgba(222,14,14,1) 90% ) !important;
 }
 
 .blue {
